refactor: Apply suggestions from reviewer